* fixed style of pager.  * ajusted gap of grid.

--- a/www/template/default/theme/common/style.css
+++ b/www/template/default/theme/common/style.css
@@ -17,7 +17,6 @@ LTD www.xirangit.com)
 .btn-link {background-color: transparent;}
 
 /* Typesetting */
-ul,ol {margin-top: 10px;}
 .small, small, .label {font-size: 12px;}
 .text-latin {font-family: Arial;}
 .text-lg {font-size: 18px;}
@@ -156,6 +155,7 @@ table.captcha td label {padding: 0;}
 
 /* Image in article content */
 .device-mobile .article-content img {width: 100% !important; height: auto !important;}
+.article-content ul, .article-content ol {margin-top: 10px;}
 
 /* List */
 .list {border: 1px solid #ddd; border-radius: 2px; box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05); margin-bottom: 20px;}
@@ -345,8 +345,9 @@ td #aliasLabel {display: table-row;}
 }
 
 /* Messagebox */
+#msgBox {display: inline-block;}
 #msgBox .label.label-badge {font-weight: bold; background-color: #fff;border: 1px solid #ccc; color: #666;padding: 3px;min-width: 20px}
-#msgBox {display: none;}
+#msgBox.hiding {display: none;}
 
 /* Footer */
 #footer {padding: 20px 0; text-align: center; position: relative; border-top: 1px solid #ddd;}
@@ -417,8 +418,15 @@ body.body-modal {padding: 20px;}
 .pager .dropdown-menu {margin-top: 0; width: 212px; margin-left: -5px; padding: 0;}
 .pager .dropdown-menu > li {display: block; float: left; width: 70px; border-right: 1px dotted #ddd; border-bottom: 1px dotted #ddd}
 #_pageID, #goto {display: none}
+.pager > .pager {margin: 0;}
 
 /* Icon rotate */
 .icon-rotate-270:before {display: inline-block; -webkit-transform: rotate(270deg); -moz-transform: rotate(270deg); -ms-transform: rotate(270deg); -o-transform: rotate(270deg); transform: rotate(270deg); filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);}
 .icon-rotate-180:before {display: inline-block; -webkit-transform: rotate(180deg); -moz-transform: rotate(180deg); -ms-transform: rotate(180deg); -o-transform: rotate(180deg); transform: rotate(180deg); filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);}
 .icon-rotate-90:before {display: inline-block; -webkit-transform: rotate(90deg); -moz-transform: rotate(90deg); -ms-transform: rotate(90deg); -o-transform: rotate(90deg); transform: rotate(90deg); filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);}
+
+/* Ajusted gap of grid */
+#navbar {margin-bottom: 14px;}
+.row {margin-left: -7px; margin-right: -7px;}
+.row > [class*='col-'] {padding-left: 7px; padding-right: 7px;}
+.row > [class*='col-'] > .panel, .row > [class*='col-'] > .carousel, .page-content > .panel, #boards > .panel, .page-side > .panel, .row > [class*='col-'] > .nav, .row > [class*='col-'] > .list-group, .m-blog .card {margin-bottom: 14px;}
